tests/transpiler/x/hs/map_membership.error
run: exit status 1

/workspace/mochi/tests/transpiler/x/hs/map_membership.hs:11:28: error:
    • Couldn't match expected type: [Char]
                  with actual type: Map.Map String a0
    • In the second argument of ‘isInfixOf’, namely ‘m’
      In the first argument of ‘print’, namely ‘("a" `isInfixOf` m)’
      In a stmt of a 'do' block: print ("a" `isInfixOf` m)
   |
11 |     print ("a" `isInfixOf` m)
   |                            ^

/workspace/mochi/tests/transpiler/x/hs/map_membership.hs:12:28: error:
    • Couldn't match expected type: [Char]
                  with actual type: Map.Map String a0
    • In the second argument of ‘isInfixOf’, namely ‘m’
      In the first argument of ‘print’, namely ‘("c" `isInfixOf` m)’
      In a stmt of a 'do' block: print ("c" `isInfixOf` m)
   |
12 |     print ("c" `isInfixOf` m)
   |                            ^
