tests/transpiler/x/hs/map_membership.hs
{-# LANGUAGE DuplicateRecordFields #-}
{-# LANGUAGE OverloadedRecordDot #-}
{-# LANGUAGE NoFieldSelectors #-}
-- Generated by Mochi transpiler v0.10.33 on 2025-07-21 18:46 GMT+7
import Data.List (intercalate, isInfixOf, union, intersect, nub, sortOn, (\\))
import qualified Data.Map as Map
m = Map.fromList [("a", 1), ("b", 2)]

main :: IO ()
main = do
    print ("a" `isInfixOf` m)
    print ("c" `isInfixOf` m)
